--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ main {
    flex-wrap: wrap;
    justify-content: space-between;
    margin-right: 40px;
+   gap: 1rem;
 }
 
 #products > div {
@@ -41,6 +42,7 @@ main {
   flex-direction: column;
   align-items: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 15px;
 }
 
 #products img {
@@ -53,7 +55,8 @@ main {
   flex-direction: column;
   justify-content: space-between;
   background-color: var(--color-secondary);
-  width: 100%;
+  width: 95%;
+  margin-bottom: 10px;
   border-radius: 25px;
   height: 120px;
   padding: 25px;
